update sur employer

--- a/src/app/homed/homed.component.html
+++ b/src/app/homed/homed.component.html
@@ -16,9 +16,9 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h3 class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Managere</span></h3>
-                    <p class="myp-slider text-center">Where musicians unite and become better together</p>
-                    <p class="myp text-center">Services Entreprise    |   Service Menageres    |   Service </p>
-                    <a class="btn btn-primary btn-join" href="#">JOIN THE COMMUNITY</a>
+                    <h4 class="myp-slider text-center">Nous vous proposons des Services de qualités</h4>
+                    <p class="myp text-center">Services Entreprises    |   Service Menageres    |   Service d'Organisations </p>
+                    <a class="btn btn-primary btn-join" href="#">Rejoigner nous </a>
 
                 </div>
                 <div class="col-md-12 text-center mt-5">
