--- a/src/app/recherche/recherche.component.html
+++ b/src/app/recherche/recherche.component.html
@@ -1,5 +1,6 @@
 <app-head-admin></app-head-admin>
-<button  (click)="showHideSideBar =!showHideSideBar;" >Menu<span class="glyphicon glyphicon-bars"></span></button>
+<button  (click)="showHideSideBar =!showHideSideBar;" ><span class="glyphicon glyphicon-th-list
+  "></span></button>
 
 <div class="row">
   <div class="col-lg-12" *ngIf="showHideSideBar">
