--- a/src/app/section1/section1.component.html
+++ b/src/app/section1/section1.component.html
@@ -21,16 +21,16 @@
                         <div class="linear-grid">
                             <div class="row">
                                 <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s" >
-                                    <img src="https://images.pexels.com/photos/534031/pexels-photo-534031.jpeg?auto=compress&cs=tinysrgb&h=350" class="img-thumbnail">
+                                    <img src="../assets/images/fem.jpg" class="img-thumbnail">
                                 </div>
                                 <div class=" col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                    <img src="https://images.pexels.com/photos/258804/pexels-photo-258804.jpeg?auto=compress&cs=tinysrgb&h=350" class="img-thumbnail">
+                                    <img  src="../assets/images/feme.jpg" class="img-thumbnail">
                                 </div>
                                 <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                    <img src="https://images.pexels.com/photos/285598/pexels-photo-285598.jpeg?auto=compress&cs=tinysrgb&h=350" class="img-thumbnail">
+                                    <img  src="../assets/images/femm.jpg" class="img-thumbnail">
                                 </div>
                                 <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                    <img src="https://images.pexels.com/photos/167605/pexels-photo-167605.jpeg?auto=compress&cs=tinysrgb&h=350" class="img-thumbnail">
+                                    <img  src="../assets/images/fen.jpg" class="img-thumbnail">
                                 </div>
                             </div>
                         </div>
