--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -246,5 +246,7 @@
            </div>
       </div>
 </div>
-<button class="btn btn-primary" type="submit">Valider</button>
+<button class="btn btn-primary" type="submit">Save<span class=" glyphicon glyphicon-ok
+
+  "></span></button>
 </form>
