--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,18 +12,18 @@
         <ul class="nav navbar-nav">   
           <li><a href="#">Accueil</a></li>
           <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active"   class="navbar-brand">Admin</a></li>
-          <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active" >Demande</a></li>
-          <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active"  class="navbar-brand">Aside</a></li>
-          <li routerLinkActive="active" ><a [routerLink]="['/EspaceClient']" routerLinkActive="active" class="navbar-brand">Espace Client</a></li>
-
+<!--           <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active" >Demande</a></li>
+ -->          <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active"  class="navbar-brand">Aside</a></li>
+<!--           <li routerLinkActive="active" ><a [routerLink]="['/EspaceClient']" routerLinkActive="active" class="navbar-brand">Espace Client</a></li>
+ -->
 
         </ul>
         <a class="nav navbar-nav navbar-right"><span class="glyphicon glyphicon-earphone"></span> +221 77 334 42 54</a>
   
         <ul class="nav navbar-nav navbar-right">
 
-          <li routerLinkActive="active"><a [routerLink]="['/login']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>S’inscrire</a></li>
-          <li routerLinkActive="active" ><a [routerLink]="['/login']"  ><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+<!--           <li routerLinkActive="active"><a [routerLink]="['/login']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>S’inscrire</a></li>
+ -->          <li routerLinkActive="active" ><a [routerLink]="['/login']"  ><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
 
         </ul>
       </div>
