--- a/src/app/espace-client/espace-client.component.html
+++ b/src/app/espace-client/espace-client.component.html
@@ -35,9 +35,10 @@
 
             <!-- espace Section4 -->    
 
+            <app-employe-disponible></app-employe-disponible>
+
 
    
-<app-section2></app-section2>>    
 
    <app-footer></app-footer>
     
