--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
           <li><a href="#">Accueil</a></li>
           <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active"   class="navbar-brand">Admin</a></li>
 <!--           <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active" >Demande</a></li>
- -->          <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active"  class="navbar-brand">Aside</a></li>
+ -->          <li routerLinkActive="active" ><a [routerLink]="['/employDisponible']" routerLinkActive="active"  class="navbar-brand">disponible</a></li>
 <!--           <li routerLinkActive="active" ><a [routerLink]="['/EspaceClient']" routerLinkActive="active" class="navbar-brand">Espace Client</a></li>
  -->
 
