--- a/src/app/homed/homed.component.scss
+++ b/src/app/homed/homed.component.scss
@@ -16,7 +16,7 @@ header.masthead {
     position: relative;
     height: 50vh;
    // background-color: #343a40;
-    background: url('/../assets/images/ma.jpg') no-repeat center center;
+    background: url('/../assets/SET1/pp.jpg') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
