--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,7 +35,7 @@
                     <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/client']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>S’inscrire</a>
                     </li>
 
-                    <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/login']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-log-in"></span>Login</a>
+                    <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/test']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-log-in"></span>Login</a>
 
 
               
