--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -115,7 +115,7 @@ header.masthead {
     position: relative;
     height: 100vh;
    // background-color: #343a40;
-    background: url('/../assets/images/pom.jpeg') no-repeat center center;
+    background: url('/../assets/SET1/C1.jpg') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
