--- a/src/app/section1/section1.component.html
+++ b/src/app/section1/section1.component.html
@@ -3,13 +3,13 @@
         <div class="row">
             <div class="col-md-4 mb-3 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="big-img">
-                    <img src="../assets/images/na.jpg" class="img-fluid">
+                    <img src="../assets/images/feme.jpg" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="inner-section wow fadeInUp">
                     <h3> prestation de nettoyage <span class="bg-main"> professionnelle.</span></h3>
-                    <br/><br/>
+                    <br/>
                     <div class="linear-grid">
                         <div class="row">
 
@@ -17,23 +17,40 @@
                             <!--  -->
                             
 
-                        <h3 class="text-justify">Nos équipes prennent en charge la propreté de votre maison ou de votre condo des salles de bain à la cuisine afin que votre seul souci soit de profiter pleinement de votre espace de vie.</h3>
+                        <h4 class="text-justify">Nos équipes prennent en charge la propreté de votre maison ou de votre logement des salles de bain à la cuisine afin que votre seul souci soit de profiter pleinement de votre espace de vie.</h4>
                         <div class="linear-grid">
                             <div class="row">
                                 <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s" >
-                                    <img src="../assets/images/fem.jpg" class="img-thumbnail">
+                                    <img src="../assets/SET1/images (3).jpg" class="img-thumbnail">
                                 </div>
                                 <div class=" col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                    <img  src="../assets/images/feme.jpg" class="img-thumbnail">
+                                    <img  src="../assets/SET1/babies.jpg" class="img-thumbnail">
                                 </div>
                                 <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                    <img  src="../assets/images/femm.jpg" class="img-thumbnail">
+                                    <img  src="../assets/SET1/mom.jpg" class="img-thumbnail">
                                 </div>
                                 <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                    <img  src="../assets/images/fen.jpg" class="img-thumbnail">
+                                    <img  src="../assets/SET1/meer.jpg" class="img-thumbnail">
                                 </div>
                             </div>
                         </div>
+                        <!--  -->
+                        <div class="linear-grid">
+                                <div class="row">
+                                    <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s" >
+                                        <img src="../assets/SET1/img.jpg" class="img-thumbnail">
+                                    </div>
+                                    <div class=" col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
+                                        <img  src="../assets/SET1/babies.jpg" class="img-thumbnail">
+                                    </div>
+                                    <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
+                                        <img  src="../assets/SET1/mom.jpg" class="img-thumbnail">
+                                    </div>
+                                    <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
+                                        <img  src="../assets/SET1/meer.jpg" class="img-thumbnail">
+                                    </div>
+                                </div>
+                            </div>
                             
 
                            
