--- a/src/app/section4/section4.component.html
+++ b/src/app/section4/section4.component.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-4 col-lg-6 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="big-img-3">
-                    <img src="https://images.pexels.com/photos/167480/pexels-photo-167480.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="img-fluid">
+                    <img src="../assets/SET1/fmcui.jpg"  class="img-fluid">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-6 mt-4">
