--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,104 +15,10 @@
 
 <!-- section1 -->
 <app-section1></app-section1>
-
+<app-section2></app-section2>
+<app-section3></app-section3>
+<app-section4></app-section4>
     
-   
-
-    <section class="testimonials bg-light" id="marketplace">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 mx-auto wow fadeInUp">
-                    <h3 class="text-center font-weight-bold">MOJO<span class="bg-main">AVE</span> MARKET PLACE</h3>
-                    <p class=" text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
-                    <div class="card">
-                        <img class="card-img-top h-262" src="https://images.pexels.com/photos/449627/pexels-photo-449627.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
-                        <div class="card-block">
-
-                            <h4 class="card-title">Lorem Ipsum Dolor Site Amet</h4>
-
-                            <div class="card-text">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <small>$ 170</small>
-                            <a href="#" class="pull-right">More Info</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
-                    <div class="card">
-                        <img class="card-img-top h-262" src="https://images.pexels.com/photos/56005/fiji-beach-sand-palm-trees-56005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
-                        <div class="card-block">
-
-                            <h4 class="card-title">Lorem Ipsum Dolor Site Amet</h4>
-
-                            <div class="card-text">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <small>$ 170</small>
-                            <a href="#" class="pull-right">More Info</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
-                    <div class="card">
-                        <img class="card-img-top h-262" src="https://images.pexels.com/photos/753626/pexels-photo-753626.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
-                        <div class="card-block">
-
-                            <h4 class="card-title ">Lorem Ipsum Dolor Site Amet</h4>
-
-                            <div class="card-text ">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <small>$ 170</small>
-                            <a href="#" class="pull-right">More Info</a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="testimonials text-center ">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 mx-auto wow fadeInUp">
-                    <h3 class="text-center font-weight-bold">MOJO<span class="bg-main">AVE</span> FEATURED ARTIST</h3>
-                    <p class=" text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-6 mt-4 wow bounceInUp" data-wow-duration="1.4s">
-                    <div class="big-img-3">
-                        <img src="https://images.pexels.com/photos/167480/pexels-photo-167480.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="img-fluid">
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-6 mt-4">
-                    <div class="my-right-text wow fadeInUp">
-
-                        <p class="text-justify font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets. remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
-
-                        <a href="#" class="link-color">Michael U</a>
-                        <p class="text-muted">Lorem Ipsum Dolor Sit Amet</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
 <!-- footer -->
    <app-footer></app-footer>
     
