--- a/src/app/liste-employe/liste-employe.component.html
+++ b/src/app/liste-employe/liste-employe.component.html
@@ -32,7 +32,7 @@
 
 
             <td><button type="submit" class="btn btn-danger" (click)='deleteEmploye(employee)' ><span class="glyphicon glyphicon-trash"></span></button></td>
-            <td><button type="submit" class="btn btn-primary" (click)='editeEmploye(employee)'><span class="glyphicon glyphicon-pencil"></span></button></td>
+            <td><button type="submit" class="btn btn-primary" (click)="editeEmploye(employee)"><span class="glyphicon glyphicon-pencil"></span></button></td>
           </tr>
         </tbody>
       </table>
@@ -40,3 +40,5 @@
     </div>
   </div>
 </div>
+
+
