--- a/src/app/section2/section2.component.html
+++ b/src/app/section2/section2.component.html
@@ -2,17 +2,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 mx-auto wow fadeInUp">
-                <h3 class="text-center font-weight-bold">JOIN MOJO<span class="bg-main">AVE</span> GROUPS</h3>
+                <h3 class="text-center font-weight-bold">Entretient <span class="bg-main">ménager</span> de votre maison</h3>
                 <p class=" text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top" src="/src/assets/">
+                    <img class="card-img-top" src="../assets/SET/G1.jpg">
                     <div class="card-block">
 
-                        <h4 class="card-title text-center">CATHERINA GAIL</h4>
+                        <h4 class="card-title text-center">GARDE ENFANTS</h4>
 
                         <div class="card-text text-center">
                             <div class="social-icons">
@@ -30,10 +30,10 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top" src="https://images.pexels.com/photos/210922/pexels-photo-210922.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                    <img class="card-img-top" src="../assets/SET/M3.jpg">
                     <div class="card-block">
 
-                        <h4 class="card-title text-center">HARVEY RUBE</h4>
+                        <h4 class="card-title text-center">MENAGE</h4>
 
                         <div class="card-text text-center">
                             <div class="social-icons">
@@ -51,10 +51,10 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top" src="https://images.pexels.com/photos/756242/pexels-photo-756242.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                    <img class="card-img-top" src="../assets/SET/C1.jpg" height="170px;">
                     <div class="card-block">
 
-                        <h4 class="card-title text-center">JANET PRIS</h4>
+                        <h4 class="card-title text-center">CUISINE</h4>
 
                         <div class="card-text text-center">
                             <div class="social-icons">
@@ -72,10 +72,10 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top" src="https://images.pexels.com/photos/167445/pexels-photo-167445.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                    <img class="card-img-top" src="../assets/SET/L1.jpg"  height="170px;" >
                     <div class="card-block">
 
-                        <h4 class="card-title text-center">KEVIN WARD</h4>
+                        <h4 class="card-title text-center">LINGE</h4>
 
                         <div class="card-text text-center">
                             <div class="social-icons">
