--- a/src/app/section3/section3.component.html
+++ b/src/app/section3/section3.component.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top h-262" src="https://images.pexels.com/photos/449627/pexels-photo-449627.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                    <img class="card-img-top h-262" src="../assets/SET/G2.jpg" >
                     <div class="card-block">
 
                         <h4 class="card-title">Lorem Ipsum Dolor Site Amet</h4>
@@ -26,7 +26,7 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top h-262" src="https://images.pexels.com/photos/56005/fiji-beach-sand-palm-trees-56005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+                    <img class="card-img-top h-262" src="../assets/SET/C3.jpg">
                     <div class="card-block">
 
                         <h4 class="card-title">Lorem Ipsum Dolor Site Amet</h4>
@@ -45,7 +45,7 @@
 
             <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top h-262" src="https://images.pexels.com/photos/753626/pexels-photo-753626.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                    <img class="card-img-top h-262" src="../assets/SET1/$_20.jpg" >
                     <div class="card-block">
 
                         <h4 class="card-title ">Lorem Ipsum Dolor Site Amet</h4>
