--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,12 +6,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button> -->
-        <a class="navbar-brand"  >Webgram</a>
+        <a class="navbar-brand"  >SenMénagere</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">   
           <li><a href="#">Accueil</a></li>
-          <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active"   class="navbar-brand">Admin</a></li>
 <!--           <li routerLinkActive="active" ><a [routerLink]="['/recherche']" routerLinkActive="active" >Demande</a></li>
  -->          <li routerLinkActive="active" ><a [routerLink]="['/employDisponible']" routerLinkActive="active"  class="navbar-brand">disponible</a></li>
 <!--           <li routerLinkActive="active" ><a [routerLink]="['/EspaceClient']" routerLinkActive="active" class="navbar-brand">Espace Client</a></li>
