--- a/src/app/homed/homed.component.html
+++ b/src/app/homed/homed.component.html
@@ -18,7 +18,8 @@
                     <h3 class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Managere</span></h3>
                     <h4 class="myp-slider text-center">Nous vous proposons des Services de qualités</h4>
                     <p class="myp text-center">Services Entreprises    |   Service Menageres    |   Service d'Organisations </p>
-                    <a class="btn btn-primary btn-join" href="#">Rejoigner nous </a>
+                    <a class="btn btn-primary btn-join" href="#"><h4>Contacter Nous<span class="glyphicon glyphicon-chevron-right
+                      "></span></h4></a>
 
                 </div>
                 <div class="col-md-12 text-center mt-5">
