--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,9 +30,9 @@
              <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/']" routerLinkActive="router-link-active"   class="navbar-brand">Accueil</a>      
 
                 <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/EspaceClient']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>Espace Client</a>      
-                  <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/recherche']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>Admin</a>      
+                  <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/serviceAdmin']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>Admin</a>      
                 
-                    <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/client']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>S’inscrire</a>
+                    <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/DemandeEmployee']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-user"></span>S’inscrire</a>
                     </li>
 
                     <li class="nav-link" routerLinkActive="active"><a [routerLink]="['/test']" routerLinkActive="router-link-active"   class="navbar-brand"><span class="glyphicon glyphicon-log-in"></span>Login</a>
