--- a/src/app/recherche/recherche.component.html
+++ b/src/app/recherche/recherche.component.html
@@ -1,6 +1,6 @@
-<app-head-admin></app-head-admin>
+<app-header></app-header>
 <button  (click)="showHideSideBar =!showHideSideBar;" ><span class="glyphicon glyphicon-th-list
-  "></span></button>
+  "></span>Menu Administation</button>
 
 <div class="row">
   <div class="col-lg-12" *ngIf="showHideSideBar">
