--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,9 +4,9 @@
                
                 <div class="col-lg-6 text-center text-lg-left my-auto  wow zoomIn">
                     <ul class="list-inline mb-2">
-                        <li class="list-inline-item">
-                            <a href="#">About</a>
-                        </li>
+                        <!-- <li class="list-inline-item">
+                        <a href="#">About</a>
+                 </li>
                         <li class="list-inline-item">⋅</li>
                         <li class="list-inline-item">
                             <a href="#">Contact</a>
@@ -18,7 +18,7 @@
                         <li class="list-inline-item">⋅</li>
                         <li class="list-inline-item">
                             <a href="#">Privacy Policy</a>
-                        </li>
+                        </li> -->
                     </ul>
                     <p class="text-muted small mb-4 mb-lg-0">© Mojoave 2018. All Rights Reserved.</p>
                 </div>
