--- a/src/app/section-acceuil/section-acceuil.component.html
+++ b/src/app/section-acceuil/section-acceuil.component.html
@@ -3,17 +3,17 @@
         <div class="row">
             <div class="col-md-4 mb-3 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="big-img">
-                    <img src="../assets/images/na.jpg" class="img-fluid">
+                    <img src="../assets/SET1/client.jpg" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="inner-section wow fadeInUp">
-                    <h3>Demande de soumission<span class="bg-main"> pour le service ménager</span></h3>
+                    <h3>Creer<span class="bg-main">  votre compte </span></h3>
                     <br/><br/>
                     <div class="linear-grid">
                         <div class="row">
                             
-                            
+                            <app-client></app-client>
 
                            
                         </div>
